Serve the frontend through the backend to get SEO
